2004-09-30	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Version 0.1.7.
	* terminal/terminal-preferences.c (transform_color_to_string): Use
	  full 16bit of each color component when storing colors.
	* terminal/terminal-preferences.c, terminal/terminal-widget.c,
	  terminal/terminal-preferences-dialog.c: Allow to specify the
	  color palette used by Terminal, defaults to the Linux console color
	  palette. Also use the specified background color for tinting
	  the terminal background in image and transparent mode.
	* terminal/terminal-window.c, terminal/main.c: Setup default icon
	  on startup not per newly created window.
	* terminal/terminal-preferences.c: Don't delete the whole Configuration
	  group when storing settings.
	* terminal/terminal-preferences.c, terminal-preferences-dialog.c,
	  terminal/terminal-widget.c, TODO: Allow the user to specify the
	  setting of the $TERM variable on new terminals.
	* doc/: Updated documentation and images to keep up with the
	  recent changes.
	* po/de.po: German translation updated.

2004-09-29	Benedikt Meurer <benny@xfce.org>

	* terminal/stock-icon-reportbug.png, terminal/terminal-window.c,
	  terminal/main.c: Added Report Bug icon from Francois Le Clainche.

2004-09-28	Benedikt Meurer <benny@xfce.org>

	* TODO: Added note about TERM environment variable.

2004-09-27	Benedikt Meurer <benny@xfce.org>

	* HACKING: Added note about bugzilla update to Release Process.

2004-09-26	Benedikt Meurer <benny@xfce.org>

	* icons/scalable: Added scalable versions of the terminal icons,
	  designed by Francois Le Clainche <fleclainche@wanadoo.fr>.
	* icons/48x48: Use new icons by Francois Le Clainche
	  <fleclainche@wanadoo.fr>.

2004-09-25	Benedikt Meurer <benny@xfce.org>

	* configure.ac, NEWS: Version 0.1.6, depends on exo-0.1 >= 0.1.1.
	* po/de.po: Translation updates.
	* terminal/terminal-window.c: Setup correct translation domain 
	  for the actions.
	* HACKING: Added note to update translations to Release process