@@ -23,6 +23,13 @@
 #include <config.h>
 #endif
 
+#ifdef HAVE_MEMORY_H
+#include <memory.h>
+#endif
+#ifdef HAVE_STRING_H
+#include <string.h>
+#endif
+
 #include <terminal/terminal-accel-map.h>
 #include <terminal/terminal-app.h>
 #include <terminal/terminal-preferences.h>
@@ -219,6 +226,7 @@ terminal_app_new_window (TerminalWindow *window,
 {
   TerminalOptions options;
 
+  bzero (&options, sizeof (options));
   options.mask = TERMINAL_OPTIONS_MASK_WORKING_DIRECTORY;
   options.working_directory = (gchar *) working_directory;
 
