@@ -1,3 +1,8 @@
+2004-09-31	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-app.c(terminal_app_new_window): Be sure to
+	  zero out options struct here. Should fix bug #3.
+
 2004-09-30	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac: Version 0.1.7.
